# guile-rs

./: .gitignore  Cargo.toml  README.md  build.rs
expanded/: scm.mod.rs
guile-rs-sys/: Cargo.toml  build.rs  wrapper.c
guile-rs-sys/src/: lib.rs
guile-sys/: Cargo.toml
internal_proc_macros/: Cargo.toml
internal_proc_macros/src/: define_subr.rs  guile_impl.rs  lib.rs
src/: interp.rs  lib.rs  scm.rs  utils.rs
src/scm/: bool.rs  foreign.rs  hashtable.rs  hashtable.rs.in  list.rs  list.rs.in  mod.rs  mod.rs.in  numeric.rs  pair.rs  pair.rs.in  string.rs  string.rs.in  symbol.rs  symbol.rs.in  untyped.rs
src/scm/numeric/: mod.rs
