[package]
name = "guile-rs"
version = "0.2.0"
authors = ["Javier Pollak <javi.po.123@gmail.com>",
           "Sheheryar Parvaz <skipper308@hotmail.ca>"]

description = "Safe high-level rust bindings to the GNU Guile library"

license = "MIT"

[dependencies]
libc = "0.2"
lazy_static = "1.0"

[dependencies.guile-rs-sys]
path = "guile-rs-sys"
# version = "0.1.0"

[build-dependencies]
syn = { version = "0.12", features = ["full", "parsing", "visit-mut", "printing", "extra-traits", "clone-impls"] }
quote = "0.4"
# syn = { git = "https://github.com/dtolnay/syn", features = ["full", "parsing", "visit_mut", "printing", "extra-traits", "clone-impls"] }
# quote = { git = 'https://github.com/dtolnay/quote' }
proc-macro2 = "*"
regex = "0.2"
# quote = "0.3"
