[package]
name = "guile-rs"
version = "0.2.1"
authors = ["Javier Pollak <javi.po.123@gmail.com>",
           "Sheheryar Parvaz <skipper308@hotmail.ca>"]

description = "Safe high-level rust bindings to the GNU Guile library"

license = "MIT"

[dependencies]
libc = "0.2"
lazy_static = "1.0"
proc-macro-hack = "0.4"
internal_proc_macros = { path = "internal_proc_macros" }

[dependencies.guile-rs-sys]
path = "guile-rs-sys"
# version = "0.1.0"
