[package]
name = "guile-rs-sys"
version = "0.1.0"
authors = ["Javier Pollak <javi.po.123@gmail.com>"]

description = "Unsafe low-level rust bindings to the GNU Guile library"

license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.32.1"
